Fixed temple image alignment issue

--- a/client/src/components/styles/login.css
+++ b/client/src/components/styles/login.css
@@ -19,7 +19,7 @@
 }
 
 .login-image {
-  width: 100%;
+  width: 103.5%;
   height: 100%;
   object-fit: cover;
   border-radius: 10px;
